Update to code :1

--- a/testni/packages.config
+++ b/testni/packages.config
@@ -1,5 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Azure.DocumentDB" version="1.21.1" targetFramework="net461" />
+  <package id="Desharp" version="1.2.11" targetFramework="net461" />
+  <package id="JDO" version="0.2.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.Azure.DocumentDB" version="1.22.0" targetFramework="net461" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net461" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
+  <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="sqlite-net-pcl" version="1.4.118" targetFramework="net461" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.10" targetFramework="net461" />
+  <package id="SQLitePCLRaw.core" version="1.1.10" targetFramework="net461" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.10" targetFramework="net461" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.10" targetFramework="net461" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.10" targetFramework="net461" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.10" targetFramework="net461" />
+  <package id="Vse.Web.Serialization.ControlledSerializationJsonConverter" version="1.0.4" targetFramework="net461" />
+  <package id="WebApiContrib.Formatting.JavaScriptSerializer" version="0.9.4.0" targetFramework="net461" />
 </packages>
