--- a/testni/App.config
+++ b/testni/App.config
@@ -9,6 +9,24 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="SQLitePCLRaw.core" publicKeyToken="1488e028ca7ab535" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.10.86" newVersion="1.1.10.86" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="SQLitePCLRaw.batteries_v2" publicKeyToken="8226ea5df37bcae9" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.10.86" newVersion="1.1.10.86" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="Desharp:Enabled" value="1" />
+    <add key="Desharp:Output" value="html" />
+    <add key="Desharp:Levels" value="+exception,debug,info,-notice,-warning,+error,+critical,alert,+emergency,javascript" />
+    <add key="Desharp:Directory" value="~/logs" />
+  </appSettings>
 </configuration>
